--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,17 @@
-packaging==24.1
-wheel @ file:///opt/homebrew/Cellar/python%403.13/3.13.0_1/libexec/wheel-0.44.0-py3-none-any.whl#sha256=f49b82715dce6365f75eddcb0a9bb47d0d46feaf14bbc739dfcbd677b7073f5b
+bidict==0.23.1
+blinker==1.9.0
+click==8.1.7
+Flask==3.1.0
+Flask-Cors==5.0.0
+Flask-SocketIO==5.4.1
+h11==0.14.0
+importlib_metadata==8.5.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+python-engineio==4.10.1
+python-socketio==5.11.4
+simple-websocket==1.1.0
+Werkzeug==3.1.3
+wsproto==1.2.0
+zipp==3.21.0
